# poetry_demo

./: README.md  pyproject.toml
app/: main.py
tests/: test_main.py
