[tool.poetry]
name = "poetry_demo"
version = "0.1.0"
description = ""
authors = ["yuta519 <>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^1.4"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"